Pre-public sweep: untrack sandbox docs, split CLAUDE.md, add Apache-2.0 LICENSE
Going public: tenant-environment.md (this machine's sandbox setup) leaves
tracking and joins .gitignore alongside a new CLAUDE.local.md, which
absorbs the tenant-sandbox build recipes, network notes, verification
workflow, and operator-side skill pointers from CLAUDE.md. The public
CLAUDE.md keeps what the project actually is: build/CI/release facts,
the margin dogfooding protocol, and project conventions.

History audit (58 commits): no credentials or secret patterns; .idea/
(the margin-thread archives) never tracked, sample-project/.idea/
confirmed ignored. tenant-environment.md remains in past history —
reviewed: infrastructure shape only, no secrets, not worth rewriting
history and breaking every tag.

LICENSE: Apache-2.0 (matches the IntelliJ Platform; patent grant;
contributions arrive under the same terms via §5).